--- a/keymap_drawer.config.yaml
+++ b/keymap_drawer.config.yaml
@@ -2,10 +2,12 @@ parse_config:
   mark_alternate_layer_activators: true
   sticky_label: $$mdi:gesture-tap-hold$$
   trans_legend:
-    tap: $$mdi:transfer$$
     type: trans
 
   raw_binding_map:
+    "&none":
+      type: none
+
     # Macro
     "&wintb":
       tap: $$mdi:dock-window$$
@@ -21,7 +23,7 @@ parse_config:
       tap: $$mdi:mouse$$
       hold: DPI
     "&ppy_scr":
-      tap: $$mdi:mouse$$
+      tap: $$mdi:mouse-move-vertical$$
       hold: Scroll
     "&wordpv":
       hold: $$mdi:arrow-left-bold$$
@@ -47,122 +49,42 @@ parse_config:
       tap: $$mdi:mouse$$
       hold: Extra 2
 
-    # Modifiers
-    "&caps_word": $$mdi:alpha-w-box$$
-    "&kt RSHIFT":
-      tap: $$mdi:apple-keyboard-shift$$
-      hold: $$mdi:toggle-switch$$
-
-    # Empty
-    "&none":
-      tap: $$mdi:minus-circle-outline$$
-      type: none
-
-    # Whitespace
-    "&bkspc_del":
-      type: backspace
-      tap: $$mdi:backspace$$
-      shifted: $$mdi:backspace-reverse-outline$$
-
-    # Bluetooth
-    "&bt BT_PRV":
-      hold: $$mdi:arrow-left-bold$$
-      tap: $$mdi:bluetooth-connect$$
-    "&bt BT_NXT":
-      hold: $$mdi:arrow-right-bold$$
-      tap: $$mdi:bluetooth-connect$$
-
-
-    # Reset
-    "&sys_reset":
-      type: bootloader
-      tap: $$mdi:backup-restore$$
-    "&bootloader":
-      tap: $$mdi:progress-download$$
-
   # ZMK
   zmk_keycode_map:
     # Symbols
-    EXCLAMATION: "!"
     EXCL: "!"
-    AT_SIGN: "@"
     AT: "@"
     HASH: "#"
-    POUND: "#"
-    DOLLAR: $
-    DLLR: $
-    PERCENT: "%"
+    DLLR: "$"
     PRCNT: "%"
-    CARET: ^
-    AMPERSAND: "&"
+    CARET: "^"
     AMPS: "&"
-    ASTERISK: "*"
-    ASTRK: "*"
     STAR: "*"
-    LEFT_PARENTHESIS: (
-    LPAR: (
-    RIGHT_PARENTHESIS: )
-    RPAR: )
+    LPAR: "("
+    RPAR: ")"
     EQUAL: "="
-    PLUS: +
+    PLUS: "+"
     MINUS: "-"
-    UNDERSCORE: _
-    UNDER: _
-    SLASH: "/"
+    UNDER: "_"
     FSLH: "/"
-    QUESTION: "?"
     QMARK: "?"
-    BACKSLASH: '\'
-    BSLH: '\'
+    BSLH: "\\"
     PIPE: "|"
-    NON_US_BACKSLASH: \
-    PIPE2: "|"
-    NON_US_BSLH: "|"
-    SEMICOLON: ";"
     SEMI: ";"
     COLON: ":"
-    SINGLE_QUOTE: "'"
-    SQT: "'"
-    APOSTROPHE: <
     APOS:
       tap: "'"
       shifted: "\""
-    DOUBLE_QUOTES: '"'
-    DQT: '"'
-
-    LESS_THAN: <
-    LT: <
-    DOT:
-      tap: "."
-      shifted: ">"
-    COMMA:
-      tap: ","
-      shifted: "<"
-    GREATER_THAN: ">"
+    LT: "<"
+    DOT: "."
+    COMMA: ","
     GT: ">"
-    LEFT_BRACKET:
-      tap: "["
-      shifted: "{"
-    LBKT:
-      tap: "["
-      shifted: "{"
-    LEFT_BRACE: "{"
+    LBKT: "["
     LBRC: "{"
-    RIGHT_BRACKET:
-      tap: "]"
-      shifted: "}"
-    RBKT:
-      tap: "]"
-      shifted: "}"
-    RIGHT_BRACE: "}"
+    RBKT: "]"
     RBRC: "}"
-    GRAVE:
-      tap: "`"
-      shifted: "~"
+    GRAVE: "`"
     TILDE: "~"
-    NON_US_HASH: "#"
-    NUHS: "#"
-    TILDE2: "~"
 
     # Numbers
     N1:
@@ -192,11 +114,6 @@ parse_config:
     LSHIFT: $$mdi:apple-keyboard-shift$$
     LSHFT: $$mdi:apple-keyboard-shift$$
     LCMD: $$mdi:apple-keyboard-command$$
-    RCTRL: $$mdi:apple-keyboard-control$$
-    RALT: $$mdi:apple-keyboard-option$$
-    RSHIFT: $$mdi:apple-keyboard-shift$$
-    RSHFT: $$mdi:apple-keyboard-shift$$
-    RCMD: $$mdi:apple-keyboard-command$$
 
     # Navi
     UP: $$mdi:arrow-up-bold$$
@@ -209,62 +126,24 @@ parse_config:
     PG_UP: ⇞
 
     # Whitespace
-    RET:
-      type: enter
-      tap: $$mdi:keyboard-return$$
-    ENTER:
-      type: enter
-      tap: $$mdi:keyboard-return$$
+    RET: $$mdi:keyboard-return$$
     ESC: $$mdi:keyboard-esc$$
     TAB: $$mdi:keyboard-tab$$
-    LS(TAB): $$mdi:keyboard-tab-reverse$$
     SPACE: $$mdi:keyboard-space$$
-    BACKSPACE:
-      type: backspace
-      tap: $$mdi:backspace$$
-    BSPC:
-      type: backspace
-      tap: $$mdi:backspace$$
-    DELETE: $$mdi:backspace-reverse-outline$$
+    BSPC: $$mdi:backspace-outline$$
     DEL: $$mdi:backspace-reverse-outline$$
-
-    # Locks
-    CAPSLOCK: $$mdi:apple-keyboard-caps$$
-    CAPS: $$mdi:apple-keyboard-caps$$
-
 
     # Sound
     C_MUTE: $$mdi:volume-off$$
     C_VOL_UP: $$mdi:volume-high$$
     C_VOL_DN: $$mdi:volume-low$$
 
-    # Media
-    C_NEXT: $$mdi:skip-next$$
-    C_PREV: $$mdi:skip-previous$$
-    C_PP: $$mdi:play-pause$$
-
     # Bluetooth
     BT_CLR: $$mdi:bluetooth-off$$
     BT_SEL: $$mdi:bluetooth-connect$$
 
-    # Settings
-    C_BRI_UP: $$mdi:brightness-5$$
-    C_BRI_DN: $$mdi:brightness-7$$
-
-    # System
-    C_POWER: $$mdi:power-standby$$
-    C_AL_LOCK: $$mdi:lock$$
-    K_CANCEL: $$mdi:close-box$$
-
-    # Zoom
-    RG(RS(A)):
-      tap: $$mdi:microphone$$
-      hold: zoom
-    RG(RS(V)):
-      tap: $$mdi:video$$
-      hold: zoom
-
     # ETC
+    CAPS: $$mdi:apple-keyboard-caps$$
     LANG1: "한/영"
     PSCRN: "Print Screen"
     SCROLLLOCK: "Scroll Lock"
@@ -276,31 +155,26 @@ parse_config:
     combo_plus:
       layers: [BASE]
     combo_equal:
-      offset: 0.5
+      offset: 0.8
       align: top
       layers: [BASE]
-    combo_tab:
+    combo_del:
       layers: [BASE]
     combo_bspc:
-      layers: [BASE]
-    combo_esc:
-      offset: 0.5
-      align: top
       layers: [BASE]
     combo_bslh:
       layers: [BASE]
     combo_at:
       layers: [BASE]
     combo_grave:
-      offset: 0.5
-      align: top
+      align: bottom
       layers: [BASE]
     combo_lpar:
       layers: [BASE]
     combo_rpar:
       layers: [BASE]
     combo_pipe:
-      offset: 0.5
+      offset: 0.8
       align: top
       layers: [BASE]
     combo_lang:
@@ -308,18 +182,14 @@ parse_config:
       type: lang
     combo_caps:
       layers: [BASE]
-    combo_mute:
-      offset: 0.5
-      align: top
-      layers: [BASE]
     combo_lbkt:
       layers: [BASE]
     combo_rbkt:
       layers: [BASE]
     combo_tilde:
-      offset: 0.5
-      align: top
+      align: bottom
       layers: [BASE]
+
 draw_config:
   # key dimensions, non-ortho layouts use key_h for width as well
   # key_w: 100 # This doesn't seem to do anything? 🤔
@@ -409,83 +279,6 @@ draw_config:
         --color--material--blue-gray--800: rgb(55, 71, 79);
         --color--material--blue-gray--900: rgb(38, 50, 56);
 
-        --color--material--blue-light--50: rgb(225, 245, 254);
-        --color--material--blue-light--100: rgb(179, 229, 252);
-        --color--material--blue-light--200: rgb(129, 212, 250);
-        --color--material--blue-light--300: rgb(79, 195, 247);
-        --color--material--blue-light--400: rgb(41, 182, 246);
-        --color--material--blue-light--500: rgb(3, 169, 244);
-        --color--material--blue-light--600: rgb(3, 155, 229);
-        --color--material--blue-light--700: rgb(2, 136, 209);
-        --color--material--blue-light--800: rgb(2, 119, 189);
-        --color--material--blue-light--900: rgb(1, 87, 155);
-        --color--material--blue-light--a100: rgb(128, 216, 255);
-        --color--material--blue-light--a200: rgb(64, 196, 255);
-        --color--material--blue-light--a400: rgb(0, 176, 255);
-        --color--material--blue-light--a700: rgb(0, 145, 234);
-
-        --color--material--purple--50: rgb(243, 229, 245);
-        --color--material--purple--100: rgb(225, 190, 231);
-        --color--material--purple--200: rgb(206, 147, 216);
-        --color--material--purple--300: rgb(186, 104, 200);
-        --color--material--purple--400: rgb(171, 71, 188);
-        --color--material--purple--500: rgb(156, 39, 176);
-        --color--material--purple--600: rgb(142, 36, 170);
-        --color--material--purple--700: rgb(123, 31, 162);
-        --color--material--purple--800: rgb(106, 27, 154);
-        --color--material--purple--900: rgb(74, 20, 140);
-        --color--material--purple--a100: rgb(234, 128, 252);
-        --color--material--purple--a200: rgb(224, 64, 251);
-        --color--material--purple--a400: rgb(213, 0, 249);
-        --color--material--purple--a700: rgb(170, 0, 255);
-
-        --color--material--red--50: rgb(255, 235, 238);
-        --color--material--red--100: rgb(255, 205, 210);
-        --color--material--red--200: rgb(239, 154, 154);
-        --color--material--red--300: rgb(229, 115, 115);
-        --color--material--red--400: rgb(239, 83, 80);
-        --color--material--red--500: rgb(244, 67, 54);
-        --color--material--red--600: rgb(229, 57, 53);
-        --color--material--red--700: rgb(211, 47, 47);
-        --color--material--red--800: rgb(198, 40, 40);
-        --color--material--red--900: rgb(183, 28, 28);
-        --color--material--red--a100: rgb(255, 138, 128);
-        --color--material--red--a200: rgb(255, 82, 82);
-        --color--material--red--a400: rgb(255, 23, 68);
-        --color--material--red--a700: rgb(213, 0, 0);
-
-        --color--material--teal--50: rgb(224, 242, 241);
-        --color--material--teal--100: rgb(178, 223, 219);
-        --color--material--teal--200: rgb(128, 203, 196);
-        --color--material--teal--300: rgb(77, 182, 172);
-        --color--material--teal--400: rgb(38, 166, 154);
-        --color--material--teal--500: rgb(0, 150, 136);
-        --color--material--teal--600: rgb(0, 137, 123);
-        --color--material--teal--700: rgb(0, 121, 107);
-        --color--material--teal--800: rgb(0, 105, 92);
-        --color--material--teal--900: rgb(0, 77, 64);
-        --color--material--teal--a100: rgb(167, 255, 235);
-        --color--material--teal--a200: rgb(100, 255, 218);
-        --color--material--teal--a400: rgb(29, 233, 182);
-        --color--material--teal--a700: rgb(0, 191, 165);
-
-        --color--material--yellow--50: rgb(255, 253, 231);
-        --color--material--yellow--100: rgb(255, 249, 196);
-        --color--material--yellow--200: rgb(255, 245, 157);
-        --color--material--yellow--300: rgb(255, 241, 118);
-        --color--material--yellow--400: rgb(255, 238, 88);
-        --color--material--yellow--500: rgb(255, 235, 59);
-        --color--material--yellow--600: rgb(253, 216, 53);
-        --color--material--yellow--700: rgb(251, 192, 45);
-        --color--material--yellow--800: rgb(249, 168, 37);
-        --color--material--yellow--900: rgb(245, 127, 23);
-        --color--material--yellow--a100: rgb(255, 255, 141);
-        --color--material--yellow--a200: rgb(255, 255, 0);
-        --color--material--yellow--a400: rgb(255, 234, 0);
-        --color--material--yellow--a700: rgb(255, 214, 0);
-
-        --color--turquoise--500: rgb(51, 204, 204);
-
         --color--bg: transparent;
         --color--text: var(--color--material--blue-gray--900);
 
@@ -497,8 +290,8 @@ draw_config:
         --color--key--text--shifted: var(--color--material--blue-gray--500);
         --color--key--text--hold: var(--color--material--blue-gray--500);
 
-        --color--combo--bg: var(--color--material--blue-gray--100);
-        --color--combo--border: var(--color--material--blue-gray--500);
+        --color--combo--bg: var(--color--material--blue--50);
+        --color--combo--border: var(--color--material--blue--300);
         --color--combo--dendron: var(--color--combo--border);
         --color--combo--text--tap: var(--color--material--blue-gray--800);
         --color--combo--text--shifted: var(--color--material--blue-gray--400);
@@ -509,12 +302,6 @@ draw_config:
         --color--trans--text--tap: var(--color--trans--border);
         --color--trans--text--shifted: var(--color--trans--text--tap);
         --color--trans--text--hold: var(--color--trans--text--tap);
-
-        --color--none--bg: var(--color--trans--bg);
-        --color--none--border: var(--color--trans--border);
-        --color--none--text--tap: var(--color--trans--text--tap);
-        --color--none--text--shifted: var(--color--trans--text--shifted);
-        --color--none--text--hold: var(--color--trans--text--hold);
 
         --color--ghost--bg: var(--color--trans--bg);
         --color--ghost--border: var(--color--trans--border);
@@ -585,6 +372,14 @@ draw_config:
         fill: var(--color--key--text--hold);
     }
 
+    .keypos-32,
+    .keypos-34,
+    .keypos-36,
+    .keypos-37 {
+        --color--key--bg: var(--color--material--blue-gray--100);
+        --color--key--border: var(--color--material--blue-gray--200);
+    }
+
     /*
      * Combos
      */
@@ -595,6 +390,7 @@ draw_config:
         --color--key--text--shifted: var(--color--combo--text--shifted);
         --color--key--text--hold: var(--color--combo--text--hold);
     }
+
     rect.combo {
         stroke-width: 0;
     }
@@ -605,7 +401,7 @@ draw_config:
         fill: none;
     }
     .combo.tap {
-        font-size: 14px;
+        font-size: 12px;
     }
     .combo.shifted {
         font-size: 12px;
@@ -623,6 +419,9 @@ draw_config:
     .ghost {
       opacity: 0.4;
     }
+    .none {
+      display: none;
+    }
     .trans {
         --color--key--bg: var(--color--trans--bg);
         --color--key--border: var(--color--trans--border);
@@ -630,57 +429,10 @@ draw_config:
         --color--key--text--shifted: var(--color--trans--text--shifted);
         --color--key--text--hold: var(--color--trans--text--hold);
     }
-    .none {
-        --color--key--bg: var(--color--none--bg);
-        --color--key--border: var(--color--none--border);
-        --color--key--text--tap: var(--color--none--text--tap);
-        --color--key--text--shifted: var(--color--none--text--shifted);
-        --color--key--text--hold: var(--color--none--text--hold);
-    }
     .ghost {
         --color--key--bg: var(--color--ghost--bg);
         --color--key--border: var(--color--ghost--border);
         --color--key--text--tap: var(--color--ghost--text--tap);
         --color--key--text--shifted: var(--color--ghost--text--shifted);
         --color--key--text--hold: var(--color--ghost--text--hold);
-    }
-
-
-    /*
-     * Overrides
-     */
-    .combo.lang {
-      font-size: 10px;
-    }
-
-    /* Outer column + thumb keys */
-    .keypos-30,
-    .keypos-31,
-    .keypos-32,
-    .keypos-33,
-    .keypos-34,
-    .keypos-35,
-    .keypos-36,
-    .keypos-37, {
-        --color--key--bg: var(--color--material--blue-gray--100);
-        --color--key--border: var(--color--material--blue-gray--50);
-    }
-
-    .keypos-33 {
-        --color--key--bg: var(--color--material--teal--200);
-        --color--key--border: var(--color--material--teal--100);
-    }
-
-    .keypos-35 {
-        --color--key--bg: var(--color--material--red--300);
-        --color--key--border: var(--color--material--red--200);
-        --color--key--text--shifted: var(--color--key--text--tap);
-        --color--key--text--hold: var(--color--key--text--tap);
-    }
-
-    .keypos-36 {
-        --color--key--bg: var(--color--material--blue--300);
-        --color--key--border: var(--color--material--blue--200);
-        --color--key--text--shifted: var(--color--key--text--tap);
-        --color--key--text--hold: var(--color--key--text--tap);
     }
