--- a/build.yaml
+++ b/build.yaml
@@ -4,4 +4,6 @@ include:
   - board: seeeduino_xiao_ble
     shield: totem_right
   - board: seeeduino_xiao_ble
+    shield: totem_dongle
+  - board: seeeduino_xiao_ble
     shield: settings_reset
