--- a/config/totem.conf
+++ b/config/totem.conf
@@ -1,3 +1,11 @@
-CONFIG_ZMK_USB_LOGGING=n
-CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+# Set sleep timeout to 30min (30*60*1000ms)
+CONFIG_ZMK_SLEEP=y
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=1800000
+
+# Enable mouse
 CONFIG_ZMK_MOUSE=y
+
+# Bluetooth tweaks
+CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y
+CONFIG_BT_GATT_ENFORCE_SUBSCRIPTION=n
+CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
